--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- /.main-info-item -->
            </div>
            <!-- /.main-info -->
-           <button class="main-button">Записаться</button>
+           <button class="main-button" data-toggle="modal">Записаться</button>
         </div>
         <!-- /.main-wrapper -->
       </div>
@@ -611,7 +611,7 @@
      </section>
      <!-- /.footer-->
 
-     <div class="modal is-open">
+     <div class="modal">
       <div class="modal-dialog">
         <a href="#" class="modal-close">
           <img src="/img/close.svg" alt="icon: close" class="close-icon">
@@ -625,7 +625,7 @@
             <input id="user-phone-modal" type="tel" class="input-modal phone-mask" name="userphone" placeholder="">
             <button class="modal-button">Оформить предзаказ</button>
           </div>
-          <div class="politics">
+          <div class="politics-modal">
             <input type="checkbox">
             <p class="connection-text">
               Нажимая на кнопку, вы соглашаетесь на обработку персональных данных и
@@ -635,7 +635,7 @@
           <!-- /.politics -->
         </div>
         <!-- /.modal-left -->
-         <img src="/img/modal.png" alt="photo woman" class="madal-image">
+         <img src="/img/modal.png" alt="photo woman" class="modal-image">
       </div>
       <!-- /.modal-dialog -->
      </div>
