fix: PP adaptive

--- a/index.html
+++ b/index.html
@@ -548,12 +548,12 @@
             <div class="footer-wrapper">
               <h2 class="footer-title">Контакты</h2>
               <ul class="footer-list footer-list-3">
-                <li class="footer-item item-black">Call-центр</li>
+                <li class="item-black">Call-центр</li>
                 <li class="footer-item-tel">+7 (800) 505-54-61</li>
-                <li class="footer-item">Пн-Вс 10:00 - 20:00</li>
-                <li class="footer-item item-black">Сервисный центр</li>
+                <li class="footer-item footer-item-time">Пн-Вс 10:00 - 20:00</li>
+                <li class="item-black">Сервисный центр</li>
                 <li class="footer-item-tel">+7 (499) 350-76-92</li>
-                <li class="footer-item">Пн-Вс 10:00 - 20:00</li>
+                <li class="footer-item footer-item-time">Пн-Вс 10:00 - 20:00</li>
               </ul>
             </div>
             <!-- /.footer-wrapper -->
@@ -569,8 +569,8 @@
           <div class="footer-middle-left">
             <a href="/." class="footer-logo-link"><img src="/img/logo.svg" alt="icon: logo" class="footer-logo"></a>
             <div class="save">
-              <a href="#"><img src="/img/google.png" alt="link"></a>
-              <a href="#"><img src="/img/app.png" alt="link"></a>
+              <a href="#"><img src="/img/google.png" alt="link" class="google-link"></a>
+              <a href="#"><img src="/img/app.png" alt="link" class="app-link"></a>
             </div>
             <!-- /.save -->
           </div>
@@ -587,7 +587,7 @@
               <!-- /.social-info -->
             </div>
             <!-- /.social-card -->
-            <div class="social-card">
+            <div class="social-card social-card-yt">
               <a href="#">
                 <img src="/img/youtube.svg" alt="icon: yt">
               </a>
@@ -642,7 +642,7 @@
      </section>
      <!-- /.footer-->
 
-     <div class="modal">
+     <div class="modal is-open">
       <div class="modal-dialog">
         <a href="#" class="modal-close">
           <img src="/img/close.svg" alt="icon: close" class="close-icon">
