--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <div class="mobile-menu is-open">
+  <div class="mobile-menu">
     <ul>
       <li>Сервис</li>
       <li>Сотрудничество</li>
@@ -24,7 +24,7 @@
   <!-- /.mobile-menu -->
   <section class="header-top">
     <div class="container">
-      <div class="header-nav">
+      <div class="navbar">
         <a href="#" class="mobile-menu-toggle">
           <div class="mobile-menu-line"></div>
           <div class="mobile-menu-line"></div>
